# simple-web-server-rust

./: Cargo.toml
examples/: quick_dev.rs
src/: error.rs  log.rs  main.rs  model.rs
src/model/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
